--- a/minggu2/style1.css
+++ b/minggu2/style1.css
@@ -5,16 +5,62 @@ html, body{
 
 body{
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #ddd;
+    background-color: #f2f2f2;
     line-height: 1.65;
     padding-bottom: 1000px;
 }
-.container-satu{
-    width: 800px;
-    margin: 50px auto;
-    background-color: #fff;
-    padding: 20px;
-    box-sizing: border-box;
+.container-satu {
     display: flex;
+    justify-content: space-between;
+    max-width: 1200px;
+    margin: 20px auto;
+    background-color: white;
+    padding: 20px;
+    border: 1px solid #ccc;
+}
 
+.kolom-utama {
+    width: 50%;
+    padding: 20px;
+    order: 2;
+    background-color: #fafafa;
+    align-items: center;
+    border: 1px solid #ddd;
+
+}
+
+.sidebar-satu{
+    width: 20%;
+    padding: 20px;
+    background-color: #f5f7fa;
+    border: 1px solid #ddd;
+    order: 1;
+    align-items: center;
+}
+.sidebar-dua{
+    width: 20%;
+    padding: 20px;
+    background-color: #fef5e6;
+    border: 1px solid #ddd;
+    order: 3;
+    align-items: center;
+}
+.sidebar-satu h3, .sidebar-dua h3 {
+    margin-bottom: 15px;
+    color: #555; 
+}
+.kolom-utama h2 {
+    margin-bottom: 15px;
+    color: #333; /* Slightly softer than pure black */
+}
+
+.kolom-utama p {
+    margin-bottom: 20px;
+    line-height: 1.6;
+    color: #555; /* Softer gray for text */
+}
+
+.sidebar-dua p {
+    line-height: 1.6;
+    color: #555; /* Softer gray for text */
 }
