--- a/UTS/price_validation.css
+++ b/UTS/price_validation.css
@@ -14,6 +14,7 @@ body {
     align-items: center;
     background-color: snow;
     line-height: 1.6;
+    min-height: 100vh;
     background: url(images/LAUNDRY\ \(1\).jpg) no-repeat;
     background-size: cover;
     background-position: center;
@@ -75,6 +76,7 @@ form {
 }
 
 .checkbox-container {
+    width: 5rem;
     display: flex;
     align-items: center;
     justify-content: flex-start;
