--- a/UTS/style.css
+++ b/UTS/style.css
@@ -18,11 +18,12 @@ body {
 }
 
 .wrapper {
+    background-color: #fff;
     width: 90%;
     max-width: 420px;
-    backdrop-filter: blur(10px);
-    box-shadow: 0 0 40px #333;
-    color: #fff;
+    backdrop-filter: blur(5px);
+    box-shadow: 0 0 40px #fff;
+    color: #333;
     border-radius: 20px;
     padding: 30px 40px;
     font-weight: 600;
@@ -49,15 +50,15 @@ body {
     width: 100%;
     height: 100%;
     background: transparent;
-    border: 2px solid #fff;
+    border: 2px solid #333;
     border-radius: 40px;
     font-size: 16px;
-    color: #fff;
+    color: #333;
     padding: 20px 45px 20px 20px;
 }
 
 .input-box input::placeholder {
-    color: #fff;
+    color: #333;
 }
 
 .input-box i {
@@ -66,7 +67,7 @@ body {
     top: 50%;
     transform: translateY(-50%);
     font-size: 20px;
-    color: #fff;
+    color: #333;
 }
 
 .wrapper .btn {
